--- a/css/style.css
+++ b/css/style.css
@@ -260,12 +260,61 @@ nav{
     min-width: 150px;
 }
 
+.social__btns{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    padding-top: 2rem;
+}
+
+.social__link{
+    font-size: 1.5rem;
+    color: var(--white);
+    transition: .3s;
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -ms-transition: .3s;
+    -o-transition: .3s;
+}
+
+.social__link:hover{
+    color: var(--color-scrollbar);
+    transform: translateY(-.4rem);
+    -webkit-transform: translateY(-.4rem);
+    -moz-transform: translateY(-.4rem);
+    -ms-transform: translateY(-.4rem);
+    -o-transform: translateY(-.4rem);
+}
+
+.typed-cursor{
+    color: var(--primary-color-dark);
+    font-size: 3rem;
+}
+
+
+
 /* Seccion about */
 
 .about__container{
     display: grid;
     gap: 4rem;
 }
+
+.about__container .section__header{
+    text-align: center;
+}
+
+.about__container .section__header::before{
+    content: "Sobre mí";
+    left: 50%;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+}
+
 
 .about__image img{
     max-width: 350px;
