--- a/css/style.css
+++ b/css/style.css
@@ -612,7 +612,6 @@ nav{
 .resume__hability.show {
     display: block;
     bottom: -20px;
-    /*Mostrarlatarjetadeslizándolahaciaarriba*/
     transform: translateY(0);
     -webkit-transform: translateY(0);
 }
@@ -828,12 +827,40 @@ nav{
 .blog__container{
     margin-top: 4rem;
     display: grid;
-    gap: 1rem;
+    gap: 2rem;
+}
+
+.blog__card {
+    max-width: 500px; 
+    height: 500px;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    background: #fff;
+    display: flex;
+    flex-direction: column;
+}
+
+.blog__card img {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .blog__info{
     padding: 1rem;
     background-color: var(--secondary-color-dark);
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.blog__text-container {
+    max-height: 200px; /* Limita la altura del texto */
+    overflow-y: auto; /* Agrega scroll si el contenido excede el tamaño */
+    padding-right: 5px;
 }
 
 .blog__title{
@@ -843,7 +870,7 @@ nav{
 }
 
 .blog__description{
-    margin-bottom: 2rem;
+    margin-bottom: .5rem;
 }
 
 .blog__links{
@@ -852,6 +879,8 @@ nav{
     justify-content: space-between;
     gap: 2rem;
     flex-wrap: wrap;
+    margin-top: auto;
+    padding-top: 2rem;
 }
 
 
